--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.dancingbones.dancingbonesapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="net.dancingbones.dancingbonesapp.MainActivity"
             android:label="@string/app_bar_title"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -17,10 +20,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".NewsDetailActivity"
-            android:label="@string/app_bar_title"
-            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
